fix notification double border.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -50,7 +50,7 @@
     .btn-default, .btn-primary {
       border-bottom: 0;
       border-top: 0;
-      border-radius: 0 0 @border-radius-base 0;
+      border-radius: 0;
     }
     > .btn-group .btn-default {
       border-right: 0;
