--- a/src/Adstacy/AppBundle/Resources/public/less/layout/notification.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/notification.less
@@ -21,15 +21,12 @@
 
 .notifications {
   li {
-    border-top: 1px solid #ddd;
     padding: 0;
-  }
-  li:first-child {
-    border-top: 0;
   }
 
   li.no-new-notifications {
-    color: #ccc;
+    list-style: none;
+    color: @gray;
     font-size: 14px;
     padding: 10px 15px;
     text-align: center;
@@ -75,17 +72,15 @@
   }
 }
 
-#show-all-notifications {
+#show-all-notifications a {
   background-color: #f5f5f5;
   text-align: center;
-
-  .notification {
-    display: block;
-    padding: 5px;
-  }
 }
 
 #all-notifications {
+  border-radius: @border-radius-base;
+  .box-shadow(0 1px 1px #aaa);
+
   .list-group-item:first-child a {
     .border-top-radius(@border-radius-base);
   }
